@@ -17,11 +17,11 @@
 #include <boost/atomic/detail/config.hpp>
 #include <boost/atomic/detail/platform.hpp>
 
-#if !defined(BOOST_ATOMIC_EMULATED)
-#include BOOST_ATOMIC_DETAIL_HEADER(boost/atomic/detail/ops_)
-#else
+// #if !defined(BOOST_ATOMIC_EMULATED)
+// #include BOOST_ATOMIC_DETAIL_HEADER(boost/atomic/detail/ops_)
+// #else
 #include <boost/atomic/detail/operations_fwd.hpp>
-#endif
+// #endif
 
 #ifdef BOOST_HAS_PRAGMA_ONCE
 #pragma once
